check metadata 2 - npe